--- a/exemplo1.html
+++ b/exemplo1.html
@@ -5,8 +5,31 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Margin</title>
     <style media="screen">
-      
-    </style>
+
+        #elem-1, #elem-2{
+          box-sizing: border-box;
+        }
+
+        #elem-1{
+          text-align: center;
+          width: 150px;
+          border: 1px solid #ff0000;
+          padding: 20px;
+        }
+
+        #elem-2{
+          text-align: center;
+          width: 150px;
+          border: 1px solid #0000ff;
+          margin-top:10px;
+          margin-right: 0px;
+          margin-bottom: 0px;
+          margin-left: 200px;
+
+
+        }
+  </style>
+
   </head>
   <body>
     <p id="elem-1">EXEMPLO-1</p>
